<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">HHS Moodle</string>
    <string name="app_permissions_title">Used permission</string>
    <string name="app_permissions">

        &lt;i>\"Access storage\" permission:&lt;/i>&lt;br>
        &#8226; Lists: creating and storing.&lt;br>
        &#8226; Backup: backup and restore databases.&lt;br>
        &#8226; Downloads: save downloads on the sd-card.&lt;br>
        &#8226; Screenshots: save screenshots of a website on the sd-card.&lt;br>&lt;br>

        &lt;i>Grant permission later:&lt;/i>&lt;br>
        If you don\'t permit this now, you can do it later. Please open then \"Settings -> Grant permission\".</string>
    <string name="app_permissions_title_dist">Used permission</string>
    <string name="app_permissions_dist">

        &lt;i>Manage \"Do not disturb\":&lt;/i>&lt;br>
        This is used to set your phone in silent mode during lessons.&lt;br>&lt;br>

        &lt;i>Grant permission later:&lt;/i>&lt;br>
        If you don\'t permit this now, you can do it later. Please open then \"Settings -> Do not disturb\".</string>
    <string name="app_share_screenshot">Share screenshot using:</string>
    <string name="app_share_link">Share link using:</string>
    <string name="app_share_file">Choose file with:</string>
    <string name="app_contDesc_1">header</string>
    <string name="app_contDesc_3">splashScreen</string>
    <string name="app_conf">Confirmation</string>
    <string name="app_att">Attachment</string>
    <string name="app_myMoodle">My Moodle</string>
    <string name="app_close">Please wait … Closing app.</string>
    <string name="text_tit_1">Dashboard</string>
    <string name="text_tit_2">Profile</string>
    <string name="text_tit_8">Calendar</string>
    <string name="text_tit_3">Ratings</string>
    <string name="text_tit_4">Notifications</string>
    <string name="text_tit_5">Settings</string>
    <string name="text_tit_6">School homepage</string>
    <string name="text_tit_7">Web search</string>
    <string name="text_tit_11">Moodle</string>
    <string name="text_tit_9">Check</string>
    <string name="text_tit_10">Clock</string>
    <string name="about_title_main">About HHS Moodle</string>
    <string name="about_title_dev">Developer</string>
    <string name="about_title_libs">Used open source libraries</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_changelog_summary">Open Github site and see what\'s new … (needs internet connection)</string>
    <string name="about_license">License</string>
    <string name="about_license_summary">The app is licensed under GPL and completely open source and free (as in freedom).</string>
    <string name="about_dev">Gaukler Faun</string>
    <string name="about_dev_summary">Open my profile on Github (needs internet connection).</string>
    <string name="about_intro">Intro</string>
    <string name="about_intro_summary">Show the intro screen one more time.</string>
    <string name="about_license_3">Used to build the intro screen.</string>
    <string name="about_license_5">Used to encrypt pin (for app protection).</string>
    <string name="about_license_7">Used to create the \"About screen\".</string>
    <string name="about_license_8">The source of nearly all icons.</string>
    <string name="about_license_9">A powerful library for Android to display media files.</string>
    <string name="intro1_title">HHS Moodle</string>
    <string name="intro1_text">Thanks for choosing HHS Moodle. Please read the following introduction carefully. You can reach
        all important functions by swiping from the left to the middle of your screen.</string>
    <string name="intro2_title">Bookmarks</string>
    <string name="intro2_text">Create your own personal bookmarks for each visited site.</string>
    <string name="intro3_title">Todo lists</string>
    <string name="intro3_text">Create todo lists. Sort them by priority or let you show notifications in the status bar.</string>
    <string name="intro4_title">Notes</string>
    <string name="intro4_text">Create notes. You can also receive text (e.g. links) from other apps.</string>
    <string name="intro5_title">Tools</string>
    <string name="intro5_text">Calculate your grades, create course lists or …</string>
    <string name="intro6_title">Help</string>
    <string name="intro6_text">Over the menu you can reach a help dialog on every screen.</string>
    <string name="intro7_title">Settings</string>
    <string name="intro7_text">Configure the app to your fittings.</string>
    <string name="intro8_title">Security</string>
    <string name="intro8_text">All databases and your login data are decrypted. Create a pin to protect the app against unwanted usage.</string>
    <string name="intro9_title">Login</string>
    <string name="intro9_text">Enter your Moodle login data on the next screen. You will be logged in automatically in future. You
        can edit your login data in the settings.</string>
    <string name="intro10_title">Schedule</string>
    <string name="intro10_text">Create your schedule, so that your phone does not ring during lessons.</string>
    <string name="login_user">Username</string>
    <string name="login_password">Password</string>
    <string name="login_hint">Please enter username and password.</string>
    <string name="login_text">If this does not work: edit your login data in the settings and restart the app. This dialog will
        disappear, when you are successfully logged in.</string>
    <string name="login_title">Automatic login</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_notes">Notes</string>
    <string name="title_browser">Browser</string>
    <string name="sort_title">title</string>
    <string name="sort_date">date</string>
    <string name="sort_extension">extension</string>
    <string name="sort_icon">icon</string>
    <string name="sort_not">notification</string>
    <string name="sort_pri">priority</string>
    <string name="sort_att">attachment</string>
    <string name="menu_share">Share website</string>
    <string name="menu_share_screenshot">Share screenshot</string>
    <string name="menu_share_link">Share link as text</string>
    <string name="menu_share_link_browser">Open link in external browser</string>
    <string name="menu_share_link_copy">Copy link to clipboard</string>
    <string name="menu_save_screenshot">Save screenshot</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookmark">Add bookmark</string>
    <string name="menu_help">Help</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_finish">Exit app</string>
    <string name="menu_save">Save</string>
    <string name="action_sort">Sort entries</string>
    <string name="action_sort_title">Sort by title</string>
    <string name="action_sort_icon">Sort by icon</string>
    <string name="action_sort_create">Sort by date</string>
    <string name="action_sort_att">Sort by Attachment</string>
    <string name="action_sort_notification">Sort by notification</string>
    <string name="action_sort_priority">Sort by priority</string>
    <string name="action_sort_ext">Sort by extension</string>
    <string name="action_filter">Search</string>
    <string name="action_filter_title">Search in titles</string>
    <string name="action_filter_cont">Search in content</string>
    <string name="action_filter_create">Search in creation dates</string>
    <string name="action_filter_url">Search in URLs</string>
    <string name="action_filter_att">Search in attachments</string>
    <string name="action_filter_course">Search in courses</string>
    <string name="action_image_load">Choose image</string>
    <string name="filter_today">Today</string>
    <string name="filter_yesterday">Yesterday</string>
    <string name="filter_before">Day before yesterday</string>
    <string name="filter_month">This month</string>
    <string name="filter_own">Own search</string>
    <string name="filter_clear">Cancel search</string>
    <string name="context_linkCopy_toast">Link successfully copied</string>
    <string name="context_saveImage_toast">Saving image as:</string>
    <string name="pref_2">App settings</string>
    <string name="pref_3">Permissions | About</string>
    <string name="pref_5">Security</string>
    <string name="action_username">Login data (Moodle)</string>
    <string name="action_username_summary">Please enter your Moodle username and password to get automatically logged in.</string>
    <string name="action_tabMain">Main screen</string>
    <string name="action_tabMain_summary">Which tab should be displayed as default on the main screen?</string>
    <string name="action_notShow_title">About</string>
    <string name="action_notShow_title_summary">Learn more about the app (changelog, license, used libraries, …).</string>
    <string name="action_protect">Pin (App access)</string>
    <string name="action_protect_summary">Set a pin to protect app against unwanted access. Only use numbers. Let empty, if you do
        not want to protect the app (own risk).</string>
    <string name="action_problem_summary">Problems? Send me a mail.</string>
    <string name="action_font">Font size</string>
    <string name="action_font_summary">Change font size for websites.</string>
    <string name="action_help">Help menu</string>
    <string name="action_help_summary">Disable all help menus in the app.</string>
    <string name="action_backup">Backup</string>
    <string name="action_backup_summary">Backup and restore your databases (notes, bookmarks, …). A new backup overwrites the old one.</string>
    <string name="action_backupAut">Automatic backup</string>
    <string name="action_backupAut_summary">Always backup all databases (Todo, bookmarks, …), when leaving the app.</string>
    <string name="action_shortcut">Shortcuts</string>
    <string name="action_shortcut_summary">Create shortcuts on your desktop for fast access to main functions of the app (Bookmarks,
        todo lists, …).</string>
    <string name="action_silent">Silent mode</string>
    <string name="action_silent_summary">Set your phone in silent mode during lessons. If you use Android Nougat or newer you need
        to permit \"Do not disturb\" below.</string>
    <string name="action_airplane">Airplane mode</string>
    <string name="action_airplane_summary">Enable airplane mode during lessons. Works only on rooted devices (Thanks Google!).</string>
    <string name="action_restore">Restore</string>
    <string name="toast_yes">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_notAgain">Never show</string>
    <string name="toast_download">Downloading file:</string>
    <string name="toast_download_1">Do you want to download:</string>
    <string name="toast_download_2">Download completed. Open folder manager?</string>
    <string name="toast_perm">Permissions granted?</string>
    <string name="toast_wrongPW">Uuups. Wrong password.</string>
    <string name="toast_shortcut">Shortcut successfully created.</string>
    <string name="toast_backup_not">Backup failed.</string>
    <string name="choose_titleMain">Files</string>
    <string name="action_grades">Grades calculation</string>
    <string name="number_title">Random generator</string>
    <string name="todo_title">Todo</string>
    <string name="todo_from_courseList">From course list</string>
    <string name="todo_from_new">Custom title</string>
    <string name="courseList_title">Course lists</string>
    <string name="subjects_edit_title">Name</string>
    <string name="subjects_edit_teacher">Teacher</string>
    <string name="subjects_edit_room">Room</string>
    <string name="count_title">Counter</string>
</resources>