<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_myMoodle">
        <menu>
            <item
                android:id="@+id/nav_browser"
                android:icon="@drawable/school_grey_dark"
                android:title="@string/title_browser" />
            <item
                android:id="@+id/nav_bookmarks"
                android:icon="@drawable/star_grey"
                android:title="@string/title_bookmarks" />
            <item
                android:id="@+id/nav_files"
                android:icon="@drawable/icon_download"
                android:title="@string/choose_titleMain" />
        </menu>
    </item>

    <item android:title="@string/menu_tools"
        android:id="@+id/nav_tools">
        <menu>

            <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/icon_list"
                android:title="@string/todo_title" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/pencil"
                android:title="@string/title_notes" />
            <item
                android:id="@+id/nav_random"
                android:icon="@drawable/dice_3_dark"
                android:title="@string/number_title" />
            <item
                android:id="@+id/nav_count"
                android:icon="@drawable/plus_one"
                android:title="@string/count_title" />
            <item
                android:id="@+id/nav_grades"
                android:icon="@drawable/calculator"
                android:title="@string/action_grades" />
        </menu>
    </item>

    <item android:title="@string/menu_configure">
        <menu>
            <item
                android:id="@+id/nav_courseList"
                android:icon="@drawable/account_multiple"
                android:title="@string/courseList_title" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
