<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView_header"
            android:layout_centerHorizontal="true"
            android:src="@drawable/splash1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_contDesc_1" />

        <ListView android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_header" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fabLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/fab_margin"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:background="@color/color_trans_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_from_new"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_pencil"
            app:fabSize="mini"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:clipToPadding="false"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="36dp"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:background="@color/color_trans_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_from_courseList"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/account_multiple_white"
            app:fabSize="mini"/>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clipToPadding="false"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/plus"
        app:fabSize="normal"/>

</android.support.design.widget.CoordinatorLayout>
