<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:foregroundGravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:passwordToggleEnabled="false"
                android:layout_toStartOf="@+id/imageButtonPri">

                <EditText
                    android:id="@+id/subject_title_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subjects_edit_title"
                    android:maxLines="1"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_teacher"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/layout_title"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false" >

                <EditText
                    android:id="@+id/subject_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subjects_edit_teacher"
                    android:maxLines="1"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/layout_teacher"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false" >

                <EditText
                    android:id="@+id/subject_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subjects_edit_room"
                    android:maxLines="1"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/imageButtonPri"
                android:src="@drawable/circle_grey"
                android:background="?android:selectableItemBackground"
                tools:ignore="ContentDescription"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_alignTop="@+id/layout_title"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>